[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/TrailMesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://Materials/SlashTrail.shader" type="Shader" id=2]
[ext_resource path="res://Scripts/SlashEffect.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 1.67558, 0, 0, Vector2( 0.93617, 0.963636 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.7375 ), -1.87186, 0.0, 0, 0 ]

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -10, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.2, 1, -10, 0, 0, 0, -0.382683, 0, 0.92388, 1, 1, 1 )

[node name="SlashEffect" type="Spatial"]
script = ExtResource( 3 )

[node name="SwingArm" type="Spatial" parent="."]
transform = Transform( 0.92388, 0, -0.382683, 0, 1, 0, 0.382683, 0, 0.92388, -10, 0, 0 )

[node name="TrailMesh" parent="SwingArm" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
length = 10.0
width = 15.0
material = SubResource( 1 )
segments = Vector2( 20, 10 )
length_curve = SubResource( 2 )
retraction_speed = 35.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="SwingArm"]
anims/Slash = SubResource( 3 )
[connection signal="retraction_finished" from="SwingArm/TrailMesh" to="." method="_on_TrailMesh_retraction_finished"]
[connection signal="animation_finished" from="SwingArm/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
